--- a/demo.html
+++ b/demo.html
@@ -1,155 +1,143 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="https://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-<meta http-equiv="content-type" content="text/html; charset=windows-1252">
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script src="./moving-average.js"></script>
-<style>
-    body, p { font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; }
-</style>
+  <title>Demo of Moving Average: Show Classic and Balanced SMA, EMA, WMA</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="./moving-average.js"></script>
+  <script src="./demo.js"></script>
+  <style>
+    body {
+        padding: 3px 10px;
+        background-color: #ffffff;
+        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+        color: #000000;
+    }
+    h1 { font-size: 1.8em; color: #222222; margin: 3px 0 10px 0; }
+    h2 { font-size: 1.2em; color: #000000; margin: 3px 0 10px 0; }
+    hr { border: 0; border-bottom: 1px solid #aaa; }
+    .help {
+        font-size: 80%;
+        color:gray;
+    }
+    .solidLine {
+        text-decoration-line: underline;
+        text-decoration-style: solid;
+        text-decoration-thickness: 2.5px;
+    }
+    .dashedLine {
+        text-decoration-line: underline;
+        text-decoration-style: dashed;
+        text-decoration-thickness: 2.5px;
+    }
+  </style>
+  <script>
+    $('document').ready(function() {
+        redraw();
+
+        $('#dataPoints').blur(function() {
+        console.log('blur');
+            redraw();
+        });
+
+        let firstRandom = true;
+        $('#randomize').click(function() {
+            let arr;
+            if(firstRandom) {
+                // first time: handcraftet values, not random
+                arr = [ 2, 3, 3, 4, 4, 5, 7, 8, 9, 8, 6, 3, 2, 2, 1, 0, 0, 2, 2, 4, 5, 5, 6, 7, 9, 10, 8, 7, 6, 6, 4, 3, 2, 1, 1, 2 ];
+                firstRandom = false;
+            } else {
+                let val = Math.floor(Math.random() * 11);
+                arr = $('#dataPoints').val().split(/ *, */).map(unused => {
+                    let delta = Math.floor(Math.random() * 6) - 3;
+                    val = val + delta;
+                    delta = Math.max(1, Math.abs(delta));
+                    if(val < 0) {
+                        val = delta;
+                    } else if(val > 10) {
+                        val = 10 - delta;
+                    }
+                    return val;
+                });
+            }
+            $('#dataPoints').val(arr.join(', '));
+            redraw();
+        });
+
+        $('#maSize').blur(function() {
+            redraw();
+        });
+
+        $('#showSMA, #showEMA, #showWMA, #showSlope').change(function() {
+            redraw();
+        });
+    });
+
+    function redraw() {
+        let arr = $('#dataPoints').val().split(/ *, */).map(val => { return val.replace(/[^\d\.]/g, ''); }).filter(Boolean).slice(0, 51).map(val => { return Number(val); });
+        if(arr.length < 3) {
+            arr = arr.concat([ '1', '2', '3', '4' ]).slice(0, 4);
+        }
+        //console.log('arr: '+JSON.stringify(arr));
+        $('#dataPoints').val(arr.join(', '));
+        let maSize = Math.max(2, Math.min(arr.length, parseInt($('#maSize').val(), 10)));
+        $('#maSize').val(maSize);
+        let showSMA = $('#showSMA').prop('checked');
+        let showEMA = $('#showEMA').prop('checked');
+        let showWMA = $('#showWMA').prop('checked');
+        let showSlope = $('#showSlope').prop('checked');
+        drawGraph(arr, maSize, showSMA, showEMA, showWMA, showSlope);
+    }
+  </script>
 </head>
-<body onload="drawGraph();">
-<h3>Moving Average Demo (WIP)</h3>
-<canvas id="graphCanvas" style="margin: 10px;" width="1090" height="590"></canvas>
-<script>
-function arrayToSpline(arr, tension, numOfSegments) {
-    var pts = [];
-    for(var i = 0; i < arr.length; i++) {
-        pts.push(i);
-        pts.push(arr[i]);
-    }
-    tension = (typeof tension != 'undefined') ? tension : 0.5;
-    numOfSegments = numOfSegments ? numOfSegments : 16;
-    var res = [],
-        x, y,           // our x,y coords
-        t1x, t2x, t1y, t2y, // tension vectors
-        c1, c2, c3, c4,     // cardinal points
-        st, t, i;       // steps based on num. of segments
-    pts.unshift(pts[1]);   // copy first point and insert at beginning
-    pts.unshift(pts[0]);
-    pts.push(pts[pts.length - 2]); // copy last point and append
-    pts.push(pts[pts.length - 1]);
-    // 1. loop goes through point array
-    // 2. loop goes through each segment between the 2 pts + 1e point before and after
-    for (i=2; i < (pts.length - 4); i+=2) {
-        for (t=0; t <= numOfSegments; t++) {
-            // calc tension vectors
-            t1x = (pts[i+2] - pts[i-2]) * tension;
-            t2x = (pts[i+4] - pts[i]) * tension;
-            t1y = (pts[i+3] - pts[i-1]) * tension;
-            t2y = (pts[i+5] - pts[i+1]) * tension;
-            // calc step
-            st = t / numOfSegments;
-            // calc cardinals
-            c1 =   2 * Math.pow(st, 3)  - 3 * Math.pow(st, 2) + 1; 
-            c2 = -(2 * Math.pow(st, 3)) + 3 * Math.pow(st, 2); 
-            c3 =       Math.pow(st, 3)  - 2 * Math.pow(st, 2) + st; 
-            c4 =       Math.pow(st, 3)  -     Math.pow(st, 2);
-            // calc x and y cords with common control vectors
-            x = c1 * pts[i]    + c2 * pts[i+2] + c3 * t1x + c4 * t2x;
-            y = c1 * pts[i+1]  + c2 * pts[i+3] + c3 * t1y + c4 * t2y;
-            //store points in array
-            res.push({ x: x, y: y });
-        }
-    }
-    return res;
-}
-
-function drawGraph() {
-    drawGrid();
-    var arr = [ 1, 2, 4, 5, 5, 8, 9, 7, 7, 6 ];
-    drawLine(arr, '#ee3333');
-    var maArr = movingAverage(arr, 'SMA', 7);
-    drawLine(maArr, '#33ee33', true);
-}
-
-function drawLine(arr, color, isSpline) {
-    function xTr(x) {
-        return x * 50 + 30 + 6 * 50;
-    }
-    function yTr(y) {
-        return 10 + 10 * 50 - y * 50;
-    }
-    var canvas = document.getElementById('graphCanvas');
-    if(canvas.getContext) {
-        var ctx = canvas.getContext('2d');
-        ctx.lineWidth = 1;
-        ctx.strokeStyle  = color;
-        ctx.beginPath();
-        var xOffset = 30 + 6 * 50;
-        var yOffset = 10 + 10 * 50;
-        ctx.moveTo(xTr(0), yTr(arr[0]));
-        if(isSpline) {
-            var pts = arrayToSpline(arr);
-            ctx.moveTo(xTr(pts[0].x), yTr(pts[0].y));
-            for(var i = 1; i < pts.length; i++) {
-                ctx.lineTo(xTr(pts[i].x), yTr(pts[i].y));
-            }
-        } else if(0 && isSpline) {
-            for(var i = 0; i < arr.length-1; i ++) {
-                var x_mid = (i + i + 1) / 2;
-                var y_mid = (arr[i] + arr[i+1]) / 2;
-                var cp_x1 = (x_mid + i) / 2;
-                var cp_x2 = (x_mid + i + 1) / 2;
-                ctx.quadraticCurveTo(xTr(cp_x1), yTr(arr[i]),   xTr(x_mid), yTr(y_mid));
-                ctx.quadraticCurveTo(xTr(cp_x2), yTr(arr[i+1]), xTr(i+1),   yTr(arr[i+1]));
-            }
-        } else if(0 && isSpline) {
-            for(var i = 1; i < arr.length - 2; i++) {
-                var xc = (i + i + 1) / 2;
-                var yc = (arr[i] + arr[i + 1]) / 2;
-                ctx.quadraticCurveTo(xTr(i), yTr(arr[i]), xTr(xc), yTr(yc));
-            }
-            ctx.quadraticCurveTo(xTr(i), yTr(arr[i]), xTr(i+1), yTr(arr[i+1]));
-        } else {
-            for(var i = 1; i < arr.length; i++) {
-                ctx.lineTo(xTr(i), yTr(arr[i]));
-            }
-        }
-        ctx.stroke();
-    }
-}
-
-function drawGrid() {
-    var canvas = document.getElementById('graphCanvas');
-    if (canvas.getContext) {
-        var ctx = canvas.getContext('2d');
-        ctx.fillStyle = '#f6f6fb';
-        ctx.fillRect(30 + 6 * 50, 10 + 50, 450, 450);
-        ctx.lineWidth = 1;
-        ctx.strokeStyle  = '#666666';
-        ctx.strokeRect(30, 10, 1050, 550);
-        ctx.strokeStyle  = '#111111';
-        ctx.strokeRect(30 + 6 * 50, 10 + 50, 450, 450);
-        ctx.strokeStyle  = '#999999';
-        ctx.font = '14px Sans-Serif';
-        ctx.textAlign = 'center';
-        ctx.fillStyle = '#333333';
-        for(var i = 0; i < 21; i++) {
-            ctx.beginPath();
-            ctx.moveTo(i * 50 + 30, 10);
-            ctx.lineTo(i * 50 + 30, 560);
-            ctx.stroke();
-            ctx.fillText(i - 6, i * 50 + 37, 524);
-        }
-        for(var i = 0; i < 12; i++) {
-            ctx.beginPath();
-            ctx.moveTo(30, i * 50 + 10);
-            ctx.lineTo(1080, i * 50 + 10);
-            ctx.stroke();
-            ctx.fillText(10 - i, 17, i * 50 + 16);
-        }
-        //ctx.fillText(10, 10 * 50 + 26, 530);
-    }
-}
-</script>
-
+<body>
+<h1>Demo of Moving Average: Show Classic and Balanced SMA, EMA, WMA</h1>
+<table>
+<tr><td>
+  Data points:
+  <span class="help">(y: 0...10)</span>
+</td><td>
+  <input type="text"
+    value="1, 0, 0, 1, 1, 2, 2, 2, 3, 5, 7, 8, 8, 9, 9, 9, 10, 10, 10, 10, 9, 9, 9, 8, 8, 7, 5, 3, 2, 2, 2, 1, 1, 0, 0, 1"
+    id="dataPoints"
+    size="120" />
+  <input type="button" value="Submit" />
+  <input type="button" value="Randomize" id="randomize" />
+</td></tr>
+<tr><td>
+  Moving average size:
+</td><td>
+  <input type="text" value="11" size="2" id="maSize" />
+</td></tr>
+<tr><td>
+  Show in chart:
+</td><td>
+  <label><input type="checkbox" id="showSMA" checked="checked" /> SMA
+  (<span style="color: #33ee33;" class="dashedLine">classic</span> & <span style="color: #33ee33;" class="solidLine">balanced</span>)
+  </label> &nbsp;
+  <label><input type="checkbox" id="showEMA" checked="checked" /> EMA
+  (<span style="color: #ee9933;" class="dashedLine">classic</span> & <span style="color: #ee9933;" class="solidLine">balanced</span>)
+  </label> &nbsp;
+  <label><input type="checkbox" id="showWMA" checked="checked" /> WMA
+  (<span style="color: #3333ee;" class="dashedLine">classic</span> & <span style="color: #3333ee;" class="solidLine">balanced</span>)
+  </label> &nbsp;
+  <label><input type="checkbox" id="showSlope" checked="checked" /> Slope
+  (<span style="color: #ee3333;" class="dashedLine">overall</span> & <span style="color: #ee33ee;" class="dashedLine">extended</span>)
+  </label>
+</td></tr>
+</table>
+<canvas id="graphCanvas" style="margin: 10px;" width="1200" height="590"></canvas>
+<hr />
+<table>
+<tr><td>Repository:</td><td><a href="https://github.com/peterthoeny/moving-average-js" target="_blank">
+  https://github.com/peterthoeny/moving-average-js</a></td><td>&nbsp;&nbsp;&nbsp;</td>
+<td>Author:</td><td><a href="https://github.com/peterthoeny" target="_blank">
+  https://github.com/peterthoeny</a></td></tr>
+<tr><td>Demo URL:</td><td><a href="https://peterthoeny.github.io/moving-average/demo.html" target="_blank">
+  https://peterthoeny.github.io/moving-average/demo.html</a></td><td></td>
+<td>Copyright:</td><td>2022, Peter Thoeny</td></tr>
+</table>
+<hr />
 </body>
 </html>
-
-
-
-
-
-
-
-</div></body></html>
