--- a/demo.html
+++ b/demo.html
@@ -23,12 +23,12 @@
     .solidLine {
         text-decoration-line: underline;
         text-decoration-style: solid;
-        text-decoration-thickness: 2.5px;
+        text-decoration-thickness: 2.2px;
     }
     .dashedLine {
         text-decoration-line: underline;
         text-decoration-style: dashed;
-        text-decoration-thickness: 2.5px;
+        text-decoration-thickness: 2.2px;
     }
   </style>
   <script>
@@ -103,7 +103,7 @@
   <input type="text"
     value="1, 0, 0, 1, 1, 2, 2, 2, 3, 5, 7, 8, 8, 9, 9, 9, 10, 10, 10, 10, 9, 9, 9, 8, 8, 7, 5, 3, 2, 2, 2, 1, 1, 0, 0, 1"
     id="dataPoints"
-    size="120" />
+    style="width: 850px;" />
   <input type="button" value="Submit" />
   <input type="button" value="Randomize" id="randomize" />
 </td></tr>
