--- a/demo.html
+++ b/demo.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="https://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!--
+  demo.html: Demo of moving average: Show chart of classic and balanced SMA, EMA, WMA
+  Copyright: 2022, Peter Thoeny, https://github.com/peterthoeny/moving-average-js
+  Version: v1.0.1
+  License: MIT
+-->
 <head>
   <title>Demo of Moving Average: Show Classic and Balanced SMA, EMA, WMA</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -17,8 +23,8 @@
     h2 { font-size: 1.2em; color: #000000; margin: 3px 0 10px 0; }
     hr { border: 0; border-bottom: 1px solid #aaa; }
     .help {
-        font-size: 80%;
-        color:gray;
+        font-size: 75%;
+        color: gray;
     }
     .solidLine {
         text-decoration-line: underline;
@@ -94,7 +100,7 @@
   </script>
 </head>
 <body>
-<h1>Demo of Moving Average: Show Classic and Balanced SMA, EMA, WMA</h1>
+<h1>Demo of Moving Average: Show Classic and Balanced SMA, EMA, WMA <span class="help">(v1.0.1)</span></h1>
 <table>
 <tr><td>
   Data points:
